--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -1,85 +1,206 @@
 ---
+runtime: shiny
 title: "COVID 19 Singapore"
-output:
+output: 
   html_document:
     toc: true
-    theme: united
+    theme: flatly
 ---
 
-## Getting data
-
 ```{r}
+knitr::opts_chunk$set(echo=FALSE, message=FALSE, warning=FALSE)
+```
+
+```{r echo=TRUE}
+# Libraries
 library(rvest)
 library(ggplot2)
+library(tidyr)
+library(data.table)
 source('main.r')
+source('util.r')
 
+# Params
+theme = theme_minimal()
+```
+
+## Get data
+
+```{r echo=TRUE}
 url = "https://co.vid19.sg/cases/search"
 df = get_data(url)
 ```
 
 Data is obtained from `r url`. 
 
-## Cleaning data
+## Clean data
 
-```{r}
-df = clean_data(df)
+```{r echo=TRUE}
+if(exists("df")) {
+  df = clean_data(df)
+} else {
+  filenames = list.files()[grepl("-data.csv", list.files())]
+  df = read.csv(filenames[length(filenames)], encoding="UTF-8", na.strings="NA", 
+                stringsAsFactors=FALSE)
+  df$confirmed.at.date = as.Date(df$confirmed.at.date, "%Y-%m-%d")
+  df$recovered.at.date = as.Date(df$recovered.at.date, "%Y-%m-%d")
+  df$symptomatic.at.date = as.Date(df$symptomatic.at.date, "%Y-%m-%d")
+}  
+str(df)
 ```
 
-## EDA
+### Notes about data
 
-### Histogram of N days till recovery
+1. symptomatic < confirmed < recovered date
+2. Recovered date is based on the discharged date when there are [consecutive negative PCR tests](https://www.channelnewsasia.com/news/singapore/covid19-coronavirus-singapore-discharged-patients-moh-12477696). 
+3. `days.to.recover.symptomatic` = recovered - symptomatic
+4. `days.to.recover.resources` = recovered - confirmed
+
+## What are the figures
+
+### Coronavirus through time
+
+#### Cases detected through time
 ```{r}
+min_date = min(df$confirmed.at.date, na.rm=T)
+max_date = max(df$confirmed.at.date, na.rm=T)
+```
+
+The first case detected on `r min_date`.
+
+```{r}
+
+style = "display: inline-block;vertical-align:top; padding-right: 20px"
+bootstrapPage(
+        div(style=style, dateRangeInput("range_date", "Date range", 
+                                        start = min_date, end = max_date,
+                                        min = min_date, max = max_date)),
+        div(style=style, numericInput("binwidth_date", "Days bin width", 
+                                      value = 1, min=1, max=14)))
+
+renderPlot({
+    min_date = input$range_date[1]
+    max_date = input$range_date[2]
+    data = df[df$confirmed.at.date >= min_date & df$confirmed.at.date <= max_date,]
+
+    ggplot(data=data, aes(x=confirmed.at.date)) +
+      geom_histogram(stat="bin", binwidth=input$binwidth_date, fill="steelblue") + 
+      xlab("") + ylab("") + 
+      scale_x_date(date_breaks = "weeks" , date_labels = "%Y EW %U") +
+      theme
+}, height=280)
+renderPlot({
+    min_date = input$range_date[1]
+    max_date = input$range_date[2]
+    data = df[df$confirmed.at.date >= min_date & df$confirmed.at.date <= max_date,]
+
+    type_label = c("imported case", "local transmission")
+    names(type_label) = c("Imported", "Local")
+
+    ggplot(data=data, aes(x=confirmed.at.date, fill=case.type)) +
+      geom_histogram(stat="bin", binwidth=input$binwidth_date) + 
+      facet_wrap(~ case.type, ncol=1, labeller = camelcase_labeller) + 
+      scale_fill_discrete(name="Case type", breaks=type_label, labels=names(type_label)) + 
+      xlab("") + ylab("Number of confirmed cases detected\n") +
+      scale_x_date(date_breaks = "weeks" , date_labels = "%Y EW %U") +
+      theme
+})
+```
+
+#### Hospital load through time
+```{r}
+
+# N cases still requiring treatment
+df_cases = df[, c("case", "symptomatic.at.date", "recovered.at.date", "confirmed.at.date")]
+df_cases[is.na(df_cases$recovered.at.date),]$recovered.at.date = Sys.Date()
+df_cases[is.na(df_cases$symptomatic.at.date),]$symptomatic.at.date = 
+  df_cases[is.na(df_cases$symptomatic.at.date),]$confirmed.at.date 
+# use confirmed.at if no symptomatic
+
+df_cases$day = mapply(function(min, max) { seq(min, max, by="day") }, 
+                       min=df_cases$symptomatic.at.date, max=df_cases$recovered.at.date)
+df_cases_day = data.table(unnest(df_cases, cols=c(day, case))); rm(df_cases)
+df_cases_day = df_cases_day[, list(hospital_load=length(case)), by="day"]
+
+max_load = 9*1200*0.15
+renderPlot({
+  ggplot(data=df_cases_day, aes(x=day, y=hospital_load)) +
+    geom_bar(stat="identity", fill="steelblue") + 
+    xlab("") + ylab("Number of hospitalised patients in a day\n") + 
+    scale_x_date(date_breaks = "weeks" , date_labels = "%Y EW %U") +
+    theme
+}, height=280)
+renderPlot({
+  ggplot(data=df_cases_day, aes(x=day, y=round(hospital_load/max_load*100, 2))) +
+    geom_bar(stat="identity", fill="steelblue") + 
+    xlab("") + ylab("% of (estimated) maximum patient load\n") + 
+    scale_x_date(date_breaks = "weeks" , date_labels = "%Y EW %U") +
+    theme
+}, height=280)
+```
+
+There are 9 public acute hospitals in Singapore, with an average capacity of 1,200 beds. They are currently operating at approximately [75% load](https://www.moh.gov.sg/resources-statistics/healthcare-institution-statistics/beds-occupancy-rate-(bor)). We assume that hospitals can operate at a 90% bed load, to ensure that hospitals are not overtaxed and there is sufficient isolation between covid patients (more than usual required). Then there would be `r max_load` beds available. 
+
+
+### Recovery time
+
+#### Days to recovery histogram
+
+```{r}
+is.recovered = table(!is.na(df[, c("days.to.recover.symptomatic")]))
+```
+- Number of recovered persons: `r is.recovered[2]`
+- Proportion of recovered persons: `r round(prop.table(is.recovered)[2]*100, 2)`%
+
+- Median time to recovery (from confirmed): `r as.numeric(median(df[, c("days.to.recover.symptomatic")], na.rm=T))` days
+- Median time to recovery (from confirmed): `r round(as.numeric(mean(df[, c("days.to.recover.symptomatic")], na.rm=T)), 2)` days
+
+```{r fig.height=3, fig.width=5}
 theme = theme_minimal()
 binwidth = 5
-min = as.numeric(min(df$days.to.recover.resources, na.rm=T))
-max = as.numeric(max(df$days.to.recover.resources, na.rm=T))
-data = as.numeric(df$days.to.recover.resources)
-data = data.frame(cat=cut(data, breaks=seq(min, max, by=binwidth), right = FALSE),
-                  val=data)
-hist_max = max(table(data$cat))
-
-ggplot(df, aes(x=days.to.recover.resources)) + geom_histogram(binwidth=binwidth, na.rm=T) + 
+min = as.numeric(min(df[, c("days.to.recover.symptomatic")], na.rm=T))
+max = as.numeric(max(df[, c("days.to.recover.symptomatic")], na.rm=T))
+hist_max = max(table(cut(as.numeric(df[, c("days.to.recover.symptomatic")]), 
+                          breaks=seq(min, max, by=binwidth), right = FALSE)))
+ggplot(df, aes(x=days.to.recover.symptomatic)) + geom_histogram(binwidth=binwidth, na.rm=T) + 
   xlab("Days to recover") + ylab("Number of people") +
-  scale_y_continuous(breaks=seq(0, hist_max, ifelse(hist_max <30, 1, 5))) +
+  scale_y_continuous(breaks=seq(0, hist_max, ifelse(hist_max<30, 1, 5))) +
+  scale_x_continuous(breaks=seq(0, max, ifelse(max<30, 1, 5))) + 
   theme
-
-# Number of recovered
-print(table(!is.na(df$days.to.recover.resources)))
-
-# Distribution of days it takes to recover
-print(table(data$cat))
-
-# Median and mean number of days it takes to recover
-print(median(df$days.to.recover.resources, na.rm=T))
-print(mean(df$days.to.recover.resources, na.rm=T))
-
 ```
 
-### Correlation between age and days to recover
-```{r}
 
-ggplot(df, aes(x=age, y=days.to.recover.resources)) + geom_point() + 
+#### Association between age and days to recover
+
+```{r fig.height=4, fig.width=12}
+ggplot(df, aes(x=age, y=days.to.recover.symptomatic)) + 
+  geom_smooth(method='lm', formula= y~x) +
+  geom_point() + 
   xlab("Age") + ylab("Days to recover") +
   theme
 
-df_corr = df[!is.na(df$days.to.recover.resources),]
-print("Rsq:")
-print(cor(as.numeric(df_corr$age), as.numeric(df_corr$days.to.recover.resources))^2)
+df_corr = df[!is.na(df[, c("days.to.recover.symptomatic")]),]
+rsq = cor(as.numeric(df_corr$age), as.numeric(df_corr$days.to.recover.symptomatic))^2
 
 ```
+$R^2$ = `r round(rsq*100, 2)`%
 
-### Boxplot between age brackets and days to recover
+#### Boxplot between age categories and days to recover
+
 ```{r}
-theme = theme_minimal()
-agewidth = 10
-min = as.numeric(min(df$age, na.rm=T))
-max = as.numeric(max(df$age, na.rm=T))
-data = data.frame(cat=cut(as.numeric(df$age), breaks=seq(0, max, by=agewidth), right = FALSE),
-                  age=df$age, 
-                  days=df$days.to.recover.resources)
+selectInput("age_width", label = "Age bin width", choices = c(5, 10, 20), selected = 5)
+renderPlot({
+  agewidth = as.numeric(input$age_width)
+  min = as.numeric(min(df$age, na.rm=T))
+  max = as.numeric(max(df$age, na.rm=T))
+  data = data.frame(cat=cut(as.numeric(df$age), breaks=seq(0, max, by=agewidth), right = FALSE),
+                    age=df$age, 
+                    days=df[, c("days.to.recover.symptomatic")])
+  data = data[!is.na(data$days),]
 
-ggplot(data, aes(x=cat, y=days)) + geom_boxplot() +
-  geom_jitter(height = 0, width = 0.1) +
-  xlab("Age category") + ylab("Days to recover") + theme
-
+  ggplot(data, aes(x=cat, y=days)) + geom_boxplot() +
+    geom_jitter(height = 0, width = 0.1) +
+    xlab("Age category") + ylab("Days to recover") + theme
+})
 ```
+
