[EJYS] Abstract away

--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -44,12 +44,7 @@ Data is obtained from `r url`.
 if(exists("df")) {
   df = clean_data(df)
 } else {
-  filenames = list.files()[grepl("-data.csv", list.files())]
-  df = read.csv(filenames[length(filenames)], encoding="UTF-8", na.strings="NA", 
-                stringsAsFactors=FALSE)
-  df$confirmed.at.date = as.Date(df$confirmed.at.date, "%Y-%m-%d")
-  df$recovered.at.date = as.Date(df$recovered.at.date, "%Y-%m-%d")
-  df$symptomatic.at.date = as.Date(df$symptomatic.at.date, "%Y-%m-%d")
+  df = get_alternative_data()
 }  
 str(df)
 ```
