--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -123,10 +123,10 @@ data_2nd_wave = data.table(df[df$confirmed.at.date >= date_second_wave &
 data_2nd_wave = data_2nd_wave[, list(N=length(case)),by="country.of.origin"]
 
 grid.arrange(
-  ggplot(data_1st_wave, aes(x=camelcase_labeller("", patient.nationality), y=N)) +
+  ggplot(data_1st_wave, aes(x=camelcase_labeller("", country.of.origin), y=N)) +
   geom_bar(stat = "identity") + coord_flip() + theme_minimal() +
   xlab("") + ylab("") + ggtitle("First wave"),
-  ggplot(data_2nd_wave, aes(x=camelcase_labeller("", patient.nationality), y=N)) +
+  ggplot(data_2nd_wave, aes(x=camelcase_labeller("", country.of.origin), y=N)) +
   geom_bar(stat = "identity") + coord_flip() + theme_minimal() +
   xlab("") + ylab("Number of imported cases detected") + ggtitle("Second wave")
 )
@@ -156,7 +156,8 @@ df_cases$day = mapply(function(min, max) { seq(min, max, by="day") },
                        min=df_cases$symptomatic.at.date, max=df_cases$recovered.at.date)
 df_cases_day = data.table(unnest(df_cases, cols=c(day, case))); rm(df_cases)
 df_cases_day = df_cases_day[, list(hospital_load=length(case)), by="day"]
-df_cases_day[day>=date_no_hosp]$hospital_load =  df_cases_day[day>=date_no_hosp]$hospital_load*0.2
+# df_cases_day[day>=date_no_hosp,]$hospital_load =  
+#   df_cases_day[day>=date_no_hosp,]$hospital_load*0.2
 
 
 max_load = 9*1200*0.15
@@ -171,14 +172,12 @@ renderPlot({
 renderPlot({
   ggplot(data=df_cases_day, aes(x=day, y=round(hospital_load/max_load*100, 2))) +
     geom_bar(stat="identity", fill="steelblue") + 
-    geom_vline(xintercept=date_no_hosp, size=2, col="red") +
+    # geom_vline(xintercept=date_no_hosp, size=2, col="red") +
     xlab("") + ylab("% of (estimated) maximum patient load\n") + 
     scale_x_date(date_breaks = "weeks" , date_labels = "%Y EW %U") +
     theme
 }, height=280)
 ```
-
-
 
 ### Recovery time
 
@@ -243,5 +242,12 @@ rsq = cor(as.numeric(df_corr$age), as.numeric(df_corr$days.to.recover.symptomati
 ```
 Age does not appear to be associated with the number of days to recover ($R^2$ = `r round(rsq*100, 2)`%). 
 
-#### Interventions in Singapore
+### Interventions in Singapore
 
+Source: https://www.moh.gov.sg/news-highlights/
+
+#### Key measures
+
+- 2019-03-28: defer non-essential trips to malls
+- 2019-03-27: home based
+- 
