--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -74,11 +74,10 @@ The first case detected in Singapore on `r format(min_date, "%d %B %Y")`.
 date_second_wave = as.Date("2020-02-25")
 style = "display: inline-block;vertical-align:top; padding-right: 20px"
 bootstrapPage(
-        div(style=style, dateRangeInput("range_date", "Date range", 
-                                        start = min_date, end = max_date,
-                                        min = min_date, max = max_date)),
-        div(style=style, numericInput("binwidth_date", "Days bin width", 
-                                      value = 1, min=1, max=14)))
+  div(style=style, dateRangeInput("range_date", "Date range", 
+                                  start = min_date, end = max_date,
+                                  min = min_date, max = max_date)),
+  div(style=style, numericInput("binwidth_date", "Days bin width", value = 1, min=1, max=14)))
 
 renderPlot({
     min_date = input$range_date[1]
@@ -92,6 +91,7 @@ renderPlot({
       scale_x_date(date_breaks = "weeks", date_labels = "%Y EW %U") +
       theme
 }, height=280)
+
 renderPlot({
     min_date = input$range_date[1]
     max_date = input$range_date[2]
@@ -149,15 +149,13 @@ date_no_hosp = as.Date("2020-03-24")
 df_cases = df[df$status != "Deceased", c("case", "symptomatic.at.date", "recovered.at.date", "confirmed.at.date")]
 df_cases[is.na(df_cases$recovered.at.date),]$recovered.at.date = Sys.Date()
 df_cases[is.na(df_cases$symptomatic.at.date),]$symptomatic.at.date = 
-  df_cases[is.na(df_cases$symptomatic.at.date),]$confirmed.at.date 
-# use confirmed.at if no symptomatic
+  df_cases[is.na(df_cases$symptomatic.at.date),]$confirmed.at.date # use confirmed.at if no symptomatic
 
 df_cases$day = mapply(function(min, max) { seq(min, max, by="day") }, 
                        min=df_cases$symptomatic.at.date, max=df_cases$recovered.at.date)
 df_cases_day = data.table(unnest(df_cases, cols=c(day, case))); rm(df_cases)
 df_cases_day = df_cases_day[, list(hospital_load=length(case)), by="day"]
-# df_cases_day[day>=date_no_hosp,]$hospital_load =  
-#   df_cases_day[day>=date_no_hosp,]$hospital_load*0.2
+# df_cases_day[day>=date_no_hosp,]$hospital_load =  df_cases_day[day>=date_no_hosp,]$hospital_load*0.2
 
 
 max_load = 9*1200*0.15
