--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -80,6 +80,7 @@ bootstrapPage(
   div(style=style, numericInput("binwidth_date", "Days bin width", value = 1, min=1, max=14)))
 
 renderPlot({
+    # input = range(range_date = c(as.Date(min_date), as.Date(max_date)), binwidth=1)
     min_date = input$range_date[1]
     max_date = input$range_date[2]
     data = df[df$confirmed.at.date >= min_date & df$confirmed.at.date <= max_date,]
@@ -114,22 +115,22 @@ From here, we can see that there are two waves of cases, the first from EW 03 to
 
 ```{r}
 
-# data_1st_wave = data.table(df[df$confirmed.at.date < date_second_wave &
-#                               df$infection.source == "imported case",])
-# data_1st_wave = data_1st_wave[, list(N=length(case)),by="country.of.origin"]
+data_1st_wave = data.table(df[df$confirmed.at.date < date_second_wave &
+                              df$infection.source == "imported case",])
+data_1st_wave = data_1st_wave[, list(N=length(case)),by="country.of.origin"]
 
-# data_2nd_wave = data.table(df[df$confirmed.at.date >= date_second_wave &
-#                               df$infection.source == "imported case",])
-# data_2nd_wave = data_2nd_wave[, list(N=length(case)),by="country.of.origin"]
+data_2nd_wave = data.table(df[df$confirmed.at.date >= date_second_wave &
+                              df$infection.source == "imported case",])
+data_2nd_wave = data_2nd_wave[, list(N=length(case)),by="country.of.origin"]
 
-# grid.arrange(
-#   ggplot(data_1st_wave, aes(x=camelcase_labeller("", country.of.origin), y=N)) +
-#   geom_bar(stat = "identity") + coord_flip() + theme_minimal() +
-#   xlab("") + ylab("") + ggtitle("First wave"),
-#   ggplot(data_2nd_wave, aes(x=camelcase_labeller("", country.of.origin), y=N)) +
-#   geom_bar(stat = "identity") + coord_flip() + theme_minimal() +
-#   xlab("") + ylab("Number of imported cases detected") + ggtitle("Second wave")
-# )
+grid.arrange(
+  ggplot(data_1st_wave, aes(x=camelcase_labeller("", country.of.origin), y=N)) +
+  geom_bar(stat = "identity") + coord_flip() + theme_minimal() +
+  xlab("") + ylab("") + ggtitle("First wave"),
+  ggplot(data_2nd_wave, aes(x=camelcase_labeller("", country.of.origin), y=N)) +
+  geom_bar(stat = "identity") + coord_flip() + theme_minimal() +
+  xlab("") + ylab("Number of imported cases detected") + ggtitle("Second wave")
+)
 ```
 
 
@@ -155,11 +156,13 @@ df_cases$day = mapply(function(min, max) { seq(min, max, by="day") },
                        min=df_cases$symptomatic.at.date, max=df_cases$recovered.at.date)
 df_cases_day = data.table(unnest(df_cases, cols=c(day, case))); rm(df_cases)
 df_cases_day = df_cases_day[, list(hospital_load=length(case)), by="day"]
-# df_cases_day[day>=date_no_hosp,]$hospital_load =  df_cases_day[day>=date_no_hosp,]$hospital_load*0.2
+df_cases_day$hospital_load = as.numeric(df_cases_day$hospital_load)
+df_cases_day[day>=date_no_hosp,]$hospital_load =  df_cases_day[day>=date_no_hosp,]$hospital_load*0.2
 
 
 max_load = 9*1200*0.15
 load_prop = 0.2
+
 renderPlot({
   ggplot(data=df_cases_day, aes(x=day, y=hospital_load)) +
     geom_bar(stat="identity", fill="steelblue") + 
@@ -167,10 +170,11 @@ renderPlot({
     scale_x_date(date_breaks = "weeks" , date_labels = "%Y EW %U") +
     theme
 }, height=280)
+
 renderPlot({
   ggplot(data=df_cases_day, aes(x=day, y=round(hospital_load/max_load*100, 2))) +
     geom_bar(stat="identity", fill="steelblue") + 
-    # geom_vline(xintercept=date_no_hosp, size=2, col="red") +
+    geom_vline(xintercept=date_no_hosp-1, size=2, col="red") +
     xlab("") + ylab("% of (estimated) maximum patient load\n") + 
     scale_x_date(date_breaks = "weeks" , date_labels = "%Y EW %U") +
     theme
@@ -213,13 +217,14 @@ Here we attempt to investigate if there is an association with number of days to
 ```{r}
 selectInput("age_width", label = "Age bin width", choices = c(5, 10, 20), selected = 5)
 renderPlot({
+  # input = list(age_width=10)
   agewidth = as.numeric(input$age_width)
   min = as.numeric(min(df$age, na.rm=T))
   max = as.numeric(max(df$age, na.rm=T))
   data = data.frame(cat=cut(as.numeric(df$age), breaks=seq(0, max, by=agewidth), right = FALSE),
                     age=df$age, 
                     days=df[, c("days.to.recover.symptomatic")])
-  data = data[!is.na(data$days),]
+  data = data[!is.na(data$cat),]
 
   ggplot(data, aes(x=cat, y=days)) + geom_boxplot() +
     geom_jitter(height = 0, width = 0.1) +
